eclipse-workspace/Surya Dev Org/src/objects/Event_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>ZTS_Events__c</referenceTo>
        <relationshipLabel>Event Schedules</relationshipLabel>
        <relationshipName>Event_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Event Schedule</label>
    <nameField>
        <label>Event Schedules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>